--- a/ScreenDimmer/SettingsForm.resx
+++ b/ScreenDimmer/SettingsForm.resx
@@ -157,13 +157,13 @@
     <value>6, 38</value>
   </data>
   <data name="NightStartTimeLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 15</value>
+    <value>64, 15</value>
   </data>
   <data name="NightStartTimeLabel.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
   </data>
   <data name="NightStartTimeLabel.Text" xml:space="preserve">
-    <value>Night Startime</value>
+    <value>Night Start</value>
   </data>
   <data name="&gt;&gt;NightStartTimeLabel.Name" xml:space="preserve">
     <value>NightStartTimeLabel</value>
@@ -553,13 +553,13 @@
     <value>6, 84</value>
   </data>
   <data name="NightEndTimeLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 15</value>
+    <value>56, 15</value>
   </data>
   <data name="NightEndTimeLabel.TabIndex" type="System.Int32, mscorlib">
     <value>24</value>
   </data>
   <data name="NightEndTimeLabel.Text" xml:space="preserve">
-    <value>Night Endtime</value>
+    <value>Day Start</value>
   </data>
   <data name="&gt;&gt;NightEndTimeLabel.Name" xml:space="preserve">
     <value>NightEndTimeLabel</value>
@@ -763,7 +763,7 @@
     <value>22</value>
   </data>
   <data name="NightTransitionControlGroup.Text" xml:space="preserve">
-    <value>Night Transition</value>
+    <value>Day Night Cycle</value>
   </data>
   <data name="&gt;&gt;NightTransitionControlGroup.Name" xml:space="preserve">
     <value>NightTransitionControlGroup</value>
