--- a/ScreenDimmer/SettingsForm.resx
+++ b/ScreenDimmer/SettingsForm.resx
@@ -175,7 +175,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;NightStartTimeLabel.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="OpacityNightSlider.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -232,7 +232,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;TransitionTimeLabel.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="DimmingDayLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -294,6 +294,66 @@
   <data name="&gt;&gt;DimmingNightLabel.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
+  <data name="TransitionTimeMinuteDateTimePicker.CustomFormat" xml:space="preserve">
+    <value>mm</value>
+  </data>
+  <data name="TransitionTimeMinuteDateTimePicker.Location" type="System.Drawing.Point, System.Drawing">
+    <value>64, 146</value>
+  </data>
+  <data name="TransitionTimeMinuteDateTimePicker.MaximumSize" type="System.Drawing.Size, System.Drawing">
+    <value>49, 22</value>
+  </data>
+  <data name="TransitionTimeMinuteDateTimePicker.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>49, 23</value>
+  </data>
+  <data name="TransitionTimeMinuteDateTimePicker.Size" type="System.Drawing.Size, System.Drawing">
+    <value>49, 23</value>
+  </data>
+  <data name="TransitionTimeMinuteDateTimePicker.TabIndex" type="System.Int32, mscorlib">
+    <value>35</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeMinuteDateTimePicker.Name" xml:space="preserve">
+    <value>TransitionTimeMinuteDateTimePicker</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeMinuteDateTimePicker.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DateTimePicker, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeMinuteDateTimePicker.Parent" xml:space="preserve">
+    <value>NightTransitionControlGroup</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeMinuteDateTimePicker.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="TransitionTimeHourDateTimePicker.CustomFormat" xml:space="preserve">
+    <value>HH</value>
+  </data>
+  <data name="TransitionTimeHourDateTimePicker.Location" type="System.Drawing.Point, System.Drawing">
+    <value>9, 146</value>
+  </data>
+  <data name="TransitionTimeHourDateTimePicker.MaximumSize" type="System.Drawing.Size, System.Drawing">
+    <value>49, 22</value>
+  </data>
+  <data name="TransitionTimeHourDateTimePicker.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>49, 23</value>
+  </data>
+  <data name="TransitionTimeHourDateTimePicker.Size" type="System.Drawing.Size, System.Drawing">
+    <value>49, 23</value>
+  </data>
+  <data name="TransitionTimeHourDateTimePicker.TabIndex" type="System.Int32, mscorlib">
+    <value>34</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeHourDateTimePicker.Name" xml:space="preserve">
+    <value>TransitionTimeHourDateTimePicker</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeHourDateTimePicker.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DateTimePicker, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeHourDateTimePicker.Parent" xml:space="preserve">
+    <value>NightTransitionControlGroup</value>
+  </data>
+  <data name="&gt;&gt;TransitionTimeHourDateTimePicker.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="DayStartMinuteDateTimePicker.CustomFormat" xml:space="preserve">
     <value>mm</value>
   </data>
@@ -322,7 +382,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;DayStartMinuteDateTimePicker.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="NightStartMinuteDateTimePicker.CustomFormat" xml:space="preserve">
     <value>mm</value>
@@ -352,7 +412,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;NightStartMinuteDateTimePicker.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="DayStartHourDateTimePicker.CustomFormat" xml:space="preserve">
     <value>HH</value>
@@ -382,7 +442,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;DayStartHourDateTimePicker.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="NightStartHourDateTimePicker.CustomFormat" xml:space="preserve">
     <value>HH</value>
@@ -412,7 +472,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;NightStartHourDateTimePicker.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="NightEndTimeLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -442,7 +502,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;NightEndTimeLabel.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="NightTransitionEnabledCheckedBox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -472,106 +532,7 @@
     <value>NightTransitionControlGroup</value>
   </data>
   <data name="&gt;&gt;NightTransitionEnabledCheckedBox.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items" xml:space="preserve">
-    <value>00</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items1" xml:space="preserve">
-    <value>01</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items2" xml:space="preserve">
-    <value>02</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items3" xml:space="preserve">
-    <value>03</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items4" xml:space="preserve">
-    <value>04</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items5" xml:space="preserve">
-    <value>05</value>
-  </data>
-  <data name="TransitionTimeHourBox.Items6" xml:space="preserve">
-    <value>06</value>
-  </data>
-  <data name="TransitionTimeHourBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 146</value>
-  </data>
-  <data name="TransitionTimeHourBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>49, 23</value>
-  </data>
-  <data name="TransitionTimeHourBox.TabIndex" type="System.Int32, mscorlib">
-    <value>16</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeHourBox.Name" xml:space="preserve">
-    <value>TransitionTimeHourBox</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeHourBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeHourBox.Parent" xml:space="preserve">
-    <value>NightTransitionControlGroup</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeHourBox.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items" xml:space="preserve">
-    <value>00</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items1" xml:space="preserve">
-    <value>05</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items2" xml:space="preserve">
-    <value>10</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items3" xml:space="preserve">
-    <value>15</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items4" xml:space="preserve">
-    <value>20</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items5" xml:space="preserve">
-    <value>25</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items6" xml:space="preserve">
-    <value>30</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items7" xml:space="preserve">
-    <value>35</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items8" xml:space="preserve">
-    <value>40</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items9" xml:space="preserve">
-    <value>45</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items10" xml:space="preserve">
-    <value>50</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Items11" xml:space="preserve">
-    <value>55</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>64, 146</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>49, 23</value>
-  </data>
-  <data name="TransitionTimeMinuteBox.TabIndex" type="System.Int32, mscorlib">
-    <value>17</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeMinuteBox.Name" xml:space="preserve">
-    <value>TransitionTimeMinuteBox</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeMinuteBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeMinuteBox.Parent" xml:space="preserve">
-    <value>NightTransitionControlGroup</value>
-  </data>
-  <data name="&gt;&gt;TransitionTimeMinuteBox.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>7</value>
   </data>
   <data name="NightTransitionControlGroup.Location" type="System.Drawing.Point, System.Drawing">
     <value>116, 7</value>
@@ -596,66 +557,6 @@
   </data>
   <data name="&gt;&gt;NightTransitionControlGroup.ZOrder" xml:space="preserve">
     <value>2</value>
-  </data>
-  <data name="&gt;&gt;OpacityNightValueBox.Name" xml:space="preserve">
-    <value>OpacityNightValueBox</value>
-  </data>
-  <data name="&gt;&gt;OpacityNightValueBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;OpacityNightValueBox.Parent" xml:space="preserve">
-    <value>DimmingControlGroup</value>
-  </data>
-  <data name="&gt;&gt;OpacityNightValueBox.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;OpacityDayValueBox.Name" xml:space="preserve">
-    <value>OpacityDayValueBox</value>
-  </data>
-  <data name="&gt;&gt;OpacityDayValueBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;OpacityDayValueBox.Parent" xml:space="preserve">
-    <value>DimmingControlGroup</value>
-  </data>
-  <data name="&gt;&gt;OpacityDayValueBox.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;DimmingEnableCheckBox.Name" xml:space="preserve">
-    <value>DimmingEnableCheckBox</value>
-  </data>
-  <data name="&gt;&gt;DimmingEnableCheckBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;DimmingEnableCheckBox.Parent" xml:space="preserve">
-    <value>DimmingControlGroup</value>
-  </data>
-  <data name="&gt;&gt;DimmingEnableCheckBox.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="DimmingControlGroup.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 7</value>
-  </data>
-  <data name="DimmingControlGroup.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 257</value>
-  </data>
-  <data name="DimmingControlGroup.TabIndex" type="System.Int32, mscorlib">
-    <value>23</value>
-  </data>
-  <data name="DimmingControlGroup.Text" xml:space="preserve">
-    <value>Dimming</value>
-  </data>
-  <data name="&gt;&gt;DimmingControlGroup.Name" xml:space="preserve">
-    <value>DimmingControlGroup</value>
-  </data>
-  <data name="&gt;&gt;DimmingControlGroup.Type" xml:space="preserve">
-    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;DimmingControlGroup.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;DimmingControlGroup.ZOrder" xml:space="preserve">
-    <value>1</value>
   </data>
   <data name="OpacityNightValueBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>45, 207</value>
@@ -728,6 +629,30 @@
   </data>
   <data name="&gt;&gt;DimmingEnableCheckBox.ZOrder" xml:space="preserve">
     <value>4</value>
+  </data>
+  <data name="DimmingControlGroup.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 7</value>
+  </data>
+  <data name="DimmingControlGroup.Size" type="System.Drawing.Size, System.Drawing">
+    <value>98, 257</value>
+  </data>
+  <data name="DimmingControlGroup.TabIndex" type="System.Int32, mscorlib">
+    <value>23</value>
+  </data>
+  <data name="DimmingControlGroup.Text" xml:space="preserve">
+    <value>Dimming</value>
+  </data>
+  <data name="&gt;&gt;DimmingControlGroup.Name" xml:space="preserve">
+    <value>DimmingControlGroup</value>
+  </data>
+  <data name="&gt;&gt;DimmingControlGroup.Type" xml:space="preserve">
+    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;DimmingControlGroup.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;DimmingControlGroup.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <metadata name="NotifyIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -820,66 +745,6 @@
   <data name="NotifyIcon.Visible" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="&gt;&gt;PreviewNightRadioButton.Name" xml:space="preserve">
-    <value>PreviewNightRadioButton</value>
-  </data>
-  <data name="&gt;&gt;PreviewNightRadioButton.Type" xml:space="preserve">
-    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;PreviewNightRadioButton.Parent" xml:space="preserve">
-    <value>PreviewGroup</value>
-  </data>
-  <data name="&gt;&gt;PreviewNightRadioButton.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;PreviewDayRadioButton.Name" xml:space="preserve">
-    <value>PreviewDayRadioButton</value>
-  </data>
-  <data name="&gt;&gt;PreviewDayRadioButton.Type" xml:space="preserve">
-    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;PreviewDayRadioButton.Parent" xml:space="preserve">
-    <value>PreviewGroup</value>
-  </data>
-  <data name="&gt;&gt;PreviewDayRadioButton.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;PreviewEnableCheckedBox.Name" xml:space="preserve">
-    <value>PreviewEnableCheckedBox</value>
-  </data>
-  <data name="&gt;&gt;PreviewEnableCheckedBox.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;PreviewEnableCheckedBox.Parent" xml:space="preserve">
-    <value>PreviewGroup</value>
-  </data>
-  <data name="&gt;&gt;PreviewEnableCheckedBox.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="PreviewGroup.Location" type="System.Drawing.Point, System.Drawing">
-    <value>116, 193</value>
-  </data>
-  <data name="PreviewGroup.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 71</value>
-  </data>
-  <data name="PreviewGroup.TabIndex" type="System.Int32, mscorlib">
-    <value>24</value>
-  </data>
-  <data name="PreviewGroup.Text" xml:space="preserve">
-    <value>Preview Dimming</value>
-  </data>
-  <data name="&gt;&gt;PreviewGroup.Name" xml:space="preserve">
-    <value>PreviewGroup</value>
-  </data>
-  <data name="&gt;&gt;PreviewGroup.Type" xml:space="preserve">
-    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;PreviewGroup.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;PreviewGroup.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
   <data name="PreviewNightRadioButton.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -966,6 +831,30 @@
   </data>
   <data name="&gt;&gt;PreviewEnableCheckedBox.ZOrder" xml:space="preserve">
     <value>2</value>
+  </data>
+  <data name="PreviewGroup.Location" type="System.Drawing.Point, System.Drawing">
+    <value>116, 193</value>
+  </data>
+  <data name="PreviewGroup.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 71</value>
+  </data>
+  <data name="PreviewGroup.TabIndex" type="System.Int32, mscorlib">
+    <value>24</value>
+  </data>
+  <data name="PreviewGroup.Text" xml:space="preserve">
+    <value>Preview Dimming</value>
+  </data>
+  <data name="&gt;&gt;PreviewGroup.Name" xml:space="preserve">
+    <value>PreviewGroup</value>
+  </data>
+  <data name="&gt;&gt;PreviewGroup.Type" xml:space="preserve">
+    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;PreviewGroup.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;PreviewGroup.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
